--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
