--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0",
-    "next": "^10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.13",
-    "typescript": "^4.3.5"
-  }
+	"name": "learn-starter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "node server.js",
+		"build": "next build",
+		"start": "NODE_ENV=production node server.js"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.6.0",
+		"bufferutil": "^4.0.3",
+		"fs": "*",
+		"next": "^10.0.0",
+		"primus": "^8.0.4",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"redux-scuttlebutt": "^0.3.5",
+		"tls": "^0.0.1",
+		"utf-8-validate": "^5.0.5",
+		"ws": "^1.1.5"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.13",
+		"typescript": "^4.3.5"
+	}
 }
