--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "node server.js",
 		"build": "next build",
-		"start": "NODE_ENV=production node server.js"
+		"start": "NODE_ENV=production node server.js",
+		"reduce": "npx webpack --config webpack.reducers.js"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
@@ -22,6 +23,9 @@
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.13",
-		"typescript": "^4.3.5"
+		"ts-loader": "^9.2.3",
+		"ts-node": "^10.1.0",
+		"typescript": "^4.3.5",
+		"webpack-cli": "^4.7.2"
 	}
 }
