--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "node server.js",
 		"build": "next build",
 		"start": "NODE_ENV=production node server.js",
-		"reduce": "npx webpack --config webpack.reducers.js"
+		"reducers": "npx webpack --config webpack.reducers.js"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
@@ -16,6 +16,8 @@
 		"primus": "^8.0.4",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
+		"react-redux": "^7.2.4",
+		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
 		"tls": "^0.0.1",
 		"utf-8-validate": "^5.0.5",
