working undo/redo but it moves the view and cursor

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-redux": "^7.2.4",
 		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
+		"redux-undo": "^1.0.1",
 		"tls": "^0.0.1",
 		"utf-8-validate": "^5.0.5",
 		"ws": "^1.1.5"
