--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"scripts": {
 		"dev": "node server.js",
 		"build": "next build",
-		"start": "NODE_ENV=production node server.js",
-		"reducers": "npx webpack --config webpack.reducers.js"
+		"start": "next build && NODE_ENV=production node server.js",
+		"reducers": "npx webpack --config webpack.reducers.js",
+		"package": "git archive -v -o ../draftingcanvas.zip --format=zip HEAD"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
@@ -32,5 +33,8 @@
 		"typescript": "^4.3.5",
 		"webpack": "^5.46.0",
 		"webpack-cli": "^4.7.2"
+	},
+	"engines": {
+		"node": "14.15.4"
 	}
 }
