--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
 		"redux-undo": "^1.0.1",
 		"tls": "^0.0.1",
 		"utf-8-validate": "^5.0.5",
-		"ws": "^1.1.5"
+		"ws": "^1.1.5",
+		"@types/react": "^17.0.13",
+		"ts-loader": "^9.2.3",
+		"ts-node": "^10.1.0",
+		"typescript": "^4.4.2",
+		"webpack": "^5.46.0",
+		"webpack-cli": "^4.7.2"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.13",
