added text prop

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@aws-sdk/client-dynamodb": "^3.44.0",
 		"@reduxjs/toolkit": "^1.6.0",
+		"aws-sdk": "^2.1046.0",
 		"bufferutil": "^4.0.3",
 		"fs": "0.0.1-security",
 		"next": "^10.0.0",
