rust scolling kinda working

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # next.js
 /.next/
 /out/
-/datastate/*
+/datastate/
 
 # production
 /build
@@ -29,3 +29,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+#rust
+/target/
