--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
 	"prettier.enable": true,
 	"prettier.jsxBracketSameLine": true,
 	"prettier.useEditorConfig": false,
-	"editor.formatOnSave": true
+	"editor.formatOnSave": true,
+	"[rust]": {
+		"editor.defaultFormatter": "rust-lang.rust",
+		"editor.formatOnSave": true
+	}
 }
