--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"reducers": "npx webpack --config webpack.reducers.js"
 	},
 	"dependencies": {
-		"@aws-sdk/client-dynamodb": "^3.44.0",
 		"@reduxjs/toolkit": "^1.6.0",
 		"aws-sdk": "^2.1046.0",
 		"bufferutil": "^4.0.3",
@@ -30,14 +29,12 @@
 		"ws": "^1.1.5"
 	},
 	"devDependencies": {
+		"@wasm-tool/wasm-pack-plugin": "1.5.0",
 		"@types/react": "^17.0.13",
 		"ts-loader": "^9.2.3",
 		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5",
 		"webpack": "^5.46.0",
 		"webpack-cli": "^4.7.2"
-	},
-	"engines": {
-		"node": "14.15.4"
 	}
 }
