--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ license = "mit"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
+wasm-bindgen = { version = "*", features = ["serde-serialize"] } #
 serde_json = "1.0.32"
 serde_derive = "1.0.80"
 serde = "1.0.80"
+log = "0.4"
 
 [dependencies.web-sys]
 version = "0.3.4"
