--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "downlevelIteration": true,
     "strict": false,
     "allowJs": false,
-    "target": "es5"
+    "target": "es5",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
