--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": false,
 		"esModuleInterop": true,
-		// "module": "esnext",
-		"module": "CommonJS",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
@@ -16,6 +15,12 @@
 		"strict": false,
 		"allowJs": false,
 		"incremental": true
+	},
+	"ts-node": {
+		"compilerOptions": {
+			"module": "commonjs"
+		},
+		"esm": true
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
