--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "node --experimental-specifier-resolution=node --loader ts-node/esm server/test",
-		"tsdev": "ts-node server/server",
+		"dev": "ts-node server/server",
 		"build": "next build && next export",
 		"start": "next start",
 		"serve": "next serve",
