--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": false,
 		"esModuleInterop": true,
-		"module": "commonjs",
+		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
