--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,9 @@ runtime: nodejs16
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
 
+env_variables:
+    NODE_ENV: 'production'
+
 manual_scaling:
     instances: 1
 resources:
