--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
 	"private": true,
 	"scripts": {
 		"dev": "ts-node server/server",
-		"dev-build": "next build && next export",
+		"build": "next build",
+		"gcp-build": "next build",
+		"export": "next export",
 		"dev-start": "ts-node server/server",
-
-		"build": "tsc server/server.ts ",
 		"start": "node server/server.js",
-
-		"serve": "next serve",
+		"compile": "tsc server/server",
+		"deploy": "gcloud app deploy --quiet",
 		"lint": "next lint",
-		"prod": "NODE_ENV=production node server/server.js",
-		"reducers": "npx webpack --config webpack.reducers.js"
+		"prod": "NODE_ENV=production node server/server.js"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
@@ -26,7 +25,9 @@
 		"react-redux": "^7.2.4",
 		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
-		"redux-undo": "^1.0.1"
+		"redux-undo": "^1.0.1",
+		"@types/node": "^14.14.7",
+		"typescript": "^4.6.4"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.13",
@@ -34,11 +35,11 @@
 		"eslint-config-next": "12.1.0",
 		"ts-loader": "^9.2.3",
 		"ts-node": "^10.1.0",
-		"typescript": "^4.3.5",
+		"typescript": "^4.6.4",
 		"webpack": "^5.46.0",
 		"webpack-cli": "^4.7.2"
 	},
 	"engines": {
-		"node": "14.15.4"
+		"node": "14.x.x"
 	}
 }
