--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,16 @@
-env: standard
-runtime: nodejs14
-service: default
-# env: flex
+# env: standard
+# runtime: nodejs14
+
+env: flex
+runtime: nodejs
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+
+network:
+    session_affinity: true
 
 handlers:
     - url: /.*
