--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
+		"@types/node": "^14.14.7",
+		"firebase": "^9.8.1",
 		"fs": "0.0.1-security",
 		"next": "^12.1.4",
 		"primus": "^8.0.4",
@@ -26,7 +28,6 @@
 		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
 		"redux-undo": "^1.0.1",
-		"@types/node": "^14.14.7",
 		"typescript": "^4.6.4"
 	},
 	"devDependencies": {
