--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"primus-rooms": "^3.4.1",
 		"fs": "0.0.1-security",
 		"dotenv": "^16.0.1",
+		"ts-node": "^10.1.0",
+		"typescript": "^4.6.4",
 		"firebase": "^9.8.1"
 	},
 	"devDependencies": {
@@ -34,12 +36,9 @@
 		"@types/react": "^17.0.13",
 		"eslint": "8.10.0",
 		"eslint-config-next": "12.1.0",
-		"ts-node": "^10.1.0",
 		"ts-loader": "^9.2.3",
-		"typescript": "^4.6.4",
 		"webpack": "^5.46.0",
-		"webpack-cli": "^4.7.2",
-		"typescript": "^4.6.4"
+		"webpack-cli": "^4.7.2"
 	},
 	"engines": {
 		"node": "14.x.x"
