added firebase hosting

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
 	"scope": "/",
 	"start_url": "/",
 	"name": "Drafting Canvas",
-	"short_name": "Drafting Canvas",
+	"short_name": "Canvas",
 	"description": "Free online collaborative design tool",
 	"icons": [
 		{
