--- a/package.json
+++ b/package.json
@@ -4,30 +4,33 @@
 	"private": true,
 	"scripts": {
 		"dev": "ts-node server/server",
-		"build": "next build",
+		"build": "next build && next export",
+		"gcp-build": "next build",
 		"export": "next export",
 		"start": "ts-node server/server",
 		"compile": "tsc server/server --skipLibCheck",
 		"deploy": "next build && gcloud app deploy --quiet",
+		"firebase": "firebase",
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-redux": "^7.2.4",
-		"redux": "^3.7.2",
-		"redux-undo": "^1.0.1",
-		"redux-scuttlebutt": "^0.3.5",
 		"@reduxjs/toolkit": "^1.6.0",
+		"dotenv": "^16.0.1",
+		"firebase": "^9.8.1",
+		"firebase-tools": "^11.0.1",
+		"fs": "0.0.1-security",
 		"next": "latest",
 		"next-pwa": "^5.4.1",
 		"primus": "^8.0.4",
 		"primus-rooms": "^3.4.1",
-		"fs": "0.0.1-security",
-		"dotenv": "^16.0.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-redux": "^7.2.4",
+		"redux": "^3.7.2",
+		"redux-scuttlebutt": "^0.3.5",
+		"redux-undo": "^1.0.1",
 		"ts-node": "^10.1.0",
-		"typescript": "^4.6.4",
-		"firebase": "^9.8.1"
+		"typescript": "^4.6.4"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.7",
@@ -39,6 +42,6 @@
 		"webpack-cli": "^4.7.2"
 	},
 	"engines": {
-		"node": "16.x.x"
+		"node": "14.x.x"
 	}
 }
