added primus disconnect and moved removing user to the server

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,12 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+	"hosting": {
+		"public": "out",
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+		"rewrites": [
+			{
+				"source": "/editor/**",
+				"destination": "/editor/[canvas_id].html"
+			}
+		]
+	}
 }
