--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "ts-node server/server",
-		"build": "next build && next export",
+		"build": "next build",
 		"gcp-build": "next build",
 		"export": "next export",
 		"start": "ts-node server/server",
@@ -16,8 +16,7 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.0",
 		"dotenv": "^16.0.1",
-		"firebase": "^9.8.1",
-		"fs": "0.0.1-security",
+		"firebase": "^9.8.4",
 		"next": "latest",
 		"next-pwa": "^5.4.1",
 		"primus": "^8.0.4",
@@ -28,15 +27,12 @@
 		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
 		"redux-undo": "^1.0.1",
-		"ts-node": "^10.1.0",
-		"typescript": "^4.6.4"
+		"typescript": "^4.6.4",
+		"ts-node": "^10.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.7",
 		"@types/react": "^17.0.13",
-		"eslint": "8.10.0",
-		"eslint-config-next": "12.1.0",
-		"ts-loader": "^9.2.3",
 		"webpack": "^5.46.0",
 		"webpack-cli": "^4.7.2"
 	},
