--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
 		"redux": "^3.7.2",
 		"redux-scuttlebutt": "^0.3.5",
 		"redux-undo": "^1.0.1",
-		"typescript": "^4.6.4",
-		"ts-node": "^10.1.0"
+		"ts-node": "^10.1.0",
+		"typescript": "^4.6.4"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.7",
 		"@types/react": "^17.0.13",
+		"eslint": "^8.18.0",
 		"webpack": "^5.46.0",
 		"webpack-cli": "^4.7.2"
 	},
