--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
 	"scripts": {
 		"dev": "ts-node server/server",
 		"build": "rm -rf ./build && NODE_ENV=production next build",
-		"gcp-build": "next build",
 		"export": "next export",
-		"start": "next build && ts-node server/server",
+		"start": "NODE_ENV=production ts-node server/server",
 		"compile": "tsc server/server --skipLibCheck",
 		"deploy": "next build && gcloud app deploy --quiet",
 		"firebase": "firebase",
